Fix alignment in FindingInput

--- a/src/components/inputs/FindingInput.module.css
+++ b/src/components/inputs/FindingInput.module.css
@@ -9,3 +9,7 @@
     background-color: var(--mantine-color-dark-6);
   }
 }
+
+.body {
+  align-items: center ;
+}
